--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-config-next": "15.5.2",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
