--- a/components.json
+++ b/components.json
@@ -13,7 +13,7 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@/components",
-    "utils": "@/lib/utils",
+    "utils": "@/lib",
     "ui": "@/components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks"
